--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>Notes from the Kitchen</title>
+    <title>Dad's Simple Kitchen</title>
 </head>
 <body>
-   <h1>Collection</h1> 
+   <h1>Meals</h1> 
 
    <p><a href="/recipe/new">Add new recipe</a></p>
 
