Added directions to show page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
     <li>
         <a href="/recipe/<%= allRecipes[i].id %>">
             <%= allRecipes[i].name %>
+            <img src="allRecipes.image" alt="">
         </a>
     </li>
 
