--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title><%= recipe.name %></title>
 </head>
 <body>
-    <h2><%=recipe.name%></h2>
-
+    <div class="container">
+        <h2><%=recipe.name%></h2>
+    </div>
+    <br>
     <h3>Ingredients:</h3>
     <ul>
         <li>
             <%= recipe.ingredients %>
+        </li>
             <br>
             <h3>Directions:</h3>
-            <%= recipe.directions %>
-        </li>
+            <ul>
+                <li>
+                    <%= recipe.directions %>
+                </li>
+            </ul>
     </ul>
-    <a href="/recipe">Back to Collection</a>
+    <br>
+    <button type="button" class="btn"><a href="/recipe/<%=recipe._id%>/edit">Edit</a></button>
+    <br>
+    <button type="button" class="btn">
+        <a href="/recipe">Back to Collection</a>
+    </button>
 </body>
 </html>
