Delete button added and works

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>Meals</h1> 
+        <h1>Simple Meals</h1> 
         <br>
         <button><a href="/recipe/new">Add new recipe</a></button>
 
@@ -20,7 +20,6 @@
             <img src="<%= allRecipes[i].image %>">
         </a>
     </li>
-
    <% } %>
 
     </div>
