--- a/views/new.ejs
+++ b/views/new.ejs
@@ -17,5 +17,6 @@
         <input type="text" name="directions" id="directions">
         <input type="submit" value="Add Recipe">
     </form>
+    <button type="button" class="btn btn-primary"><a href="/recipe">Back to Collection</a></button>
 </body>
 </html>
