--- a/views/show.ejs
+++ b/views/show.ejs
@@ -28,6 +28,10 @@
     <br>
     <button type="button" class="btn"><a href="/recipe/<%=recipe._id%>/edit">Edit</a></button>
     <br>
+    <form action="/recipe/<%=recipe.id%>?_method=DELETE" method="POST">
+        <input type="submit" value="DELETE"/>
+    </form>
+    <br>
     <button type="button" class="btn">
         <a href="/recipe">Back to Collection</a>
     </button>
