Added images to show page

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,6 +11,9 @@
     <div class="container">
         <h2><%=recipe.name%></h2>
     </div>
+    <div id="row">
+        <img src="<%=recipe.image%>"/>
+    </div>
     <br>
     <h3>Ingredients:</h3>
     <ul>
