--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,12 +9,14 @@
 <body>
     <h2>Add a new recipe</h2>
     <form action="/recipe" method="POST">
-        <label for="name">Name</label>
+        <label for="name">Name:</label>
         <input type="text" name="name" id="name">
-        <label for="ingridients">Ingridients</label>
+        <label for="ingridients">Ingridients:</label>
         <input type="text" name="ingridients" id="ingridients">
-        <label for="directions">Directions</label>
+        <label for="directions">Directions:</label>
         <input type="text" name="directions" id="directions">
+        <label for="image">Image:</label>
+        <input type="text" name="image" id="image">
         <input type="submit" value="Add Recipe">
     </form>
     <button type="button" class="btn btn-primary"><a href="/recipe">Back to Collection</a></button>
