updated show and new.ejs

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -36,7 +36,7 @@
     </form>
     <br>
     <button type="button" class="btn">
-        <a href="/recipe">Back to Collection</a>
+        <a href="/recipe">Back to Meals</a>
     </button>
 </body>
 </html>
