--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,7 +7,8 @@
     <title>Add a new recipe</title>
 </head>
 <body>
-    <h2>Add a new recipe</h2>
+    <div class="row">
+        <h2>Add a new recipe</h2>
     <form action="/recipe" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name">
@@ -19,6 +20,8 @@
         <input type="text" name="image" id="image">
         <input type="submit" value="Add Recipe">
     </form>
+    </div>
+    <br>
     <button type="button" class="btn btn-primary"><a href="/recipe">Back to Collection</a></button>
 </body>
 </html>
