fixed edit button

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,8 +12,8 @@
     <form action="/recipe" method="POST">
         <label for="name">Name:</label>
         <input type="text" name="name" id="name">
-        <label for="ingridients">Ingridients:</label>
-        <input type="text" name="ingridients" id="ingridients">
+        <label for="ingredients">Ingredients:</label>
+        <input type="text" name="ingredients" id="ingredients">
         <label for="directions">Directions:</label>
         <input type="text" name="directions" id="directions">
         <label for="image">Image:</label>
