--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Edit Page</title>
 </head>
 <body>
-    <h1>Recipe New Page</h1>
+    <h1>Edit Recipe</h1>
     <form action="/recipe/<%=recipe.id%>?_method=PUT" method="POST">
        <label for="name">Name:</label>
        <input type="text" name="name" value="<%=recipe.name%>">
