--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,10 +9,10 @@
 <body>
     <h1>Dad's Simple Kitchen</h1>
     <br>
-    <p>Welcome to Dad's Simple Kitchen. A place for anyone who wants simple yet elegant meals that don't take longer than 1 hour. More time for everything else important in life like family, beer, and sports.</p>
+    <p>Welcome to Dad's Simple Kitchen. A place for anyone who wants simple yet elegant meals that don't take longer than 1 hour tops. Leaving more time for everything else important in life like family, beer, video games and sports.</p>
     <br>
     <p>Here you can browse and keep a collection of recipes that will require little time to prep and make all while still keeping quality taste.</p>
     <br>
-    <button><a href="/recipe">Enter</a></button>
+    <button id="enter"><a href="/recipe">Enter</a></button>
 </body>
 </html>
