Did minimalist CSS styling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <title>Dad's Simple Kitchen</title>
 </head>
 <body>
@@ -14,6 +17,6 @@
     <br>
     <p>Here you can browse and keep a collection of recipes that will require little time to prep and make all while still keeping quality taste.</p>
     <br>
-    <button id="enter"><a href="/recipe">Enter</a></button>
+    <button class="button button-outline"><a href="/recipe">Enter</a></button>
 </body>
 </html>
