--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -22,8 +22,6 @@
        <input type="submit" value="submit">
     </form>
     <br>
-    <button type="button" name="button">
-        <a href="/recipe">Back</a>
-    </button>
+    <button class="button button-outline"><a href="/recipe">Back</a></button>        
 </body>
 </html>
