--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <title>Add a new recipe</title>
 </head>
 <body>
@@ -23,6 +26,6 @@
     </form>
     </div>
     <br>
-    <button type="button" class="btn btn-primary"><a href="/recipe">Back to Collection</a></button>
+    <button class="button button-outline"><a href="/recipe">Back to Collection</a></button>
 </body>
 </html>
