--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
     <title><%= recipe.name %></title>
 </head>
 <body>
@@ -29,14 +32,12 @@
             </ul>
     </ul>
     <br>
-    <button type="button" class="btn"><a href="/recipe/<%=recipe._id%>/edit">Edit</a></button>
+    <button class="button button-outline"><a href="/recipe/<%=recipe._id%>/edit">Edit</a></button>        
     <br>
     <form action="/recipe/<%=recipe.id%>?_method=DELETE" method="POST">
         <input type="submit" value="DELETE"/>
     </form>
     <br>
-    <button type="button">
-        <a href="/recipe">Back to Meals</a>
-    </button>
+    <button class="button button-outline"><a href="/recipe">Back to Meals</a></button>        
 </body>
 </html>
